infrastructure/gitops-ocp/ocp-tenant-governance/platform/namespaces/dev/dbank-app-04/networkpolicy-allow-backend-ingress-from-dbank-app-01-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-backend-ingress-from-dbank-app-01-frontend
  namespace: dbank-app-04-dev
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: backend
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              platform.company.io/application: dbank-app-01
              platform.company.io/environment: dev
          podSelector:
            matchLabels:
              app.kubernetes.io/name: frontend
      ports:
        - protocol: TCP
          port: 8080
